--- a/frontend/Sexual_Harrasment_Prevention_Cell/src/index.css
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/src/index.css
@@ -8,8 +8,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(12, 12, 12, 0.87);
+  background-color: #efefef;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,9 +28,7 @@ a:hover {
 
 body {
   margin: 0;
-  /* display: flex;
-  place-items: center; */
-  min-width: 320px;
+  min-width: s20px;
   min-height: 100vh;
 }
 
