--- a/frontend/Sexual_Harrasment_Prevention_Cell/src/index.css
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/src/index.css
@@ -7,7 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light white;
   color: rgba(12, 12, 12, 0.87);
   background-color: #efefef;
 
