--- a/frontend/Sexual_Harrasment_Prevention_Cell/src/App.css
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  display: grid;
+  margin: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   place-items: center;
   text-align: center;
 }
