--- a/frontend/Sexual_Harrasment_Prevention_Cell/src/index.css
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light white;
   color: rgba(12, 12, 12, 0.87);
-  background-color: #efefef;
+  background-color: #FAFFF3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -44,12 +44,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #136F63;
 }
 button:focus,
 button:focus-visible {
