--- a/frontend/Sexual_Harrasment_Prevention_Cell/src/index.css
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/src/index.css
@@ -7,6 +7,9 @@
   line-height: 1.5;
   font-weight: 400;
 
+  --fc-border-color: black;
+  --fc-daygrid-event-dot-width: 10px;
+
   color-scheme: light white;
   color: rgba(12, 12, 12, 0.87);
   background-color: #FAFFF3;
@@ -15,6 +18,16 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.fc .fc-col-header-cell-cushion {
+  display: inline-block;
+  padding: 2px 4px;
+}
+
+.fc .fc-col-header-cell-cushion { /* needs to be same precedence */
+  padding-top: 5px; /* an override! */
+  padding-bottom: 5px; /* an override! */
 }
 
 a {
@@ -28,7 +41,7 @@ a:hover {
 
 body {
   margin: 0;
-  min-width: s20px;
+  min-width: 20px;
   min-height: 100vh;
 }
 
